chore(clustertool): Docs and Command changes

--- a/website/src/content/docs/news/2024-10-16-news.md
+++ b/website/src/content/docs/news/2024-10-16-news.md
@@ -60,7 +60,7 @@ Follow the linked Guides to find more details on how to create your own Talos Cl
 - [VM Setup](/clustertool/virtual-machines/systemrequirements)
 - [Getting Started with Clustertool](/clustertool/getting-started/)
 - [clustertool init](/clustertool/functions/init/)
-- Edit your config (talconfig.yaml and talenv.yaml)
+- Edit your config (talconfig.yaml and clusterenv.yaml)
 - [clustertool genconfig](/clustertool/functions/genconfig/)
 - [clustertool apply](/clustertool/functions/apply/)
 
