chore(website): actually reference SCALE migration guide

--- a/website/src/content/docs/news/2024-10-16-news.md
+++ b/website/src/content/docs/news/2024-10-16-news.md
@@ -68,19 +68,23 @@ Afterwards you are ready to migrate your SCALE Apps.
 
 ### SCALE Apps Migration
 
-To migrate all of your existing SCALE Apps to your Talos Cluster you will need the following commands from ClusterTool:
+To migrate all of your existing SCALE Apps to your Talos Cluster, be sure to read our TrueNAS SCALE [Migration Guide](/clustertool/migrations/scale/)
+
+In short, you will need the following commands from ClusterTool:
+
+To export all your SCALE Apps into a ClusterTool compatible format.
 
 - [clustertool scaleexport](/clustertool/functions/scale/scaleexport/)
 
-This exports all your SCALE Apps into a ClusterTool compatible format.
+To turn the exported Apps into ClusterTool and Fluxcd compatible Helm-Release Files:
 
 - [clustertool scalemigrate](clustertool/functions/scale/scalemigrate/)
 
-This turns the exported Apps into ClusterTool and Fluxcd compatible Helm-Release Files.
+And last, but certianly not least, to install the converted Helm-Release Files onto your cluster:
 
 - [clustertool helmrelease install](/clustertool/functions/helmrelease/install/)
 
-This installs the converted Helm-Release Files onto your Cluster.
+
 
 ## Effortless Hosting with ElfHosted
 
