--- a/website/src/content/docs/news/2025-06-26-Common-2025.md
+++ b/website/src/content/docs/news/2025-06-26-Common-2025.md
@@ -7,19 +7,65 @@ tags:
   - "2025"
 ---
 
-New Features/Other Changes comming with common-2025
-Nginx Ingress Integration like Auth, ipWhitelist and themepark
-Gitops CNPG Recovery -> no more revision changes
-Disable Traefik Integration by default
-Complete Rework of Traefik Middlewares. Defined per Chart
-Changes to required pod resources
-Existing Secret Support for Pullsecret
-Removal of Portal -> leftover from Scale
-Changes to notes.txt
-Addon System rework -> failsave for current users: prevent update with old VPN-addon
-Move Metallb/Traefik service Annotations to Integrations
-Refractor of Horizontal Pod Autoscaler -> what is it
-Added support for Vertical Pod Autoscaler -> what is it
+## TrueCharts Releases `common-2025` Helm Library with Major Improvements
 
-Docs already updated for the new things. 
-I think only thing which needs changes is the Addons section
+The TrueCharts team is proud to announce the release of **`common-2025`**, the latest version of the shared Helm chart library powering all TrueCharts charts. This major update delivers powerful new features, improved integrations, and essential structural upgrades that enhance usability, maintainability, and compatibility across the board.
+
+## 🚀 Key Highlights of `common-2025`
+
+- **🔐 Nginx Ingress Integration**
+  - **Disabled by default** for a cleaner baseline
+  - Built-in support for:
+    - Authentication
+    - IP whitelisting
+    - ThemePark styling
+
+- **🛠 GitOps CNPG Recovery Enhancements**
+  - No more unwanted Helm revision changes during CNPG cluster recovery
+  - Increasing the revision is now optional.
+
+- **🌐 Traefik Updates**
+  - **Disabled by default** for a cleaner baseline
+  - Complete rework of **Traefik middlewares**, now defined per chart
+
+- **📦 Resource Management**
+  - Updated defaults for **required pod resources**
+
+- **🔑 Existing Pull Secret Support**
+  - Added support for using **existing Kubernetes secrets** for container registry authentication
+  - Simplifies integration in environments with pre-configured imagePullSecrets
+
+- **🧩 Addon System Rework**
+  - Safer upgrades: prevents updates when legacy addon layouts are present
+  - **More configuration options for addons**, including:
+    - Full access to the **workload definition**
+
+- **📁 Structural Cleanups**
+  - Removal of deprecated **Portal** (legacy from SCALE)
+  - Major improvements to `notes.txt`
+  - Moved **MetalLB** and **Traefik service annotations** to centralized integration logic
+
+- **📊 Autoscaling Enhancements**
+  - Refactored **Horizontal Pod Autoscaler (HPA)**: dynamically scales replicas based on resource usage
+  - Added support for **Vertical Pod Autoscaler (VPA)**: automatically adjusts CPU and memory limits over time
+
+- **👤 Service Account Overrides**
+  - Added support to **optionally override the service account name** in the workload `podSpec`
+
+- **🌐 Topology Key Configuration**
+  - Users can now configure a **default `topologyKey`** for scheduling behavior
+
+- **📌 Pod Affinity Support**
+  - Added full support for **pod affinity**, enabling more advanced workload placement strategies
+
+---
+
+## 🙏 Thank You
+
+This release marks another milestone in the growth of the TrueCharts ecosystem. A huge **thank you** to all contributors who help build, improve, and maintain all of our charts. Your work makes TrueCharts possible.
+
+And of course, **thank you to all users**—your feedback, deployments, and support are what drive this project forward every day.
+
+---
+
+For more information or to get involved, visit: [https://truecharts.org](https://truecharts.org)
